@@ -15,7 +15,6 @@ import java.io.IOException;
 import java.util.Locale;
 import java.util.Map;
 import java.util.stream.Stream;
-import org.eclipse.jdt.core.tests.util.PreviewTest;
 import org.eclipse.jdt.core.util.ClassFileBytesDisassembler;
 import org.eclipse.jdt.core.util.ClassFormatException;
 import org.eclipse.jdt.internal.compiler.CompilationResult;
@@ -32,11 +31,10 @@ import org.eclipse.jdt.internal.compiler.problem.DefaultProblemFactory;
 import org.eclipse.jdt.internal.compiler.problem.ProblemReporter;
 import org.junit.Test;
 
-@PreviewTest
 public class ImplicitlyDeclaredClassesTest extends AbstractRegressionTest9 {
 	public static boolean optimizeStringLiterals = false;
-	private static final JavacTestOptions JAVAC_OPTIONS = new JavacTestOptions("--enable-preview -source 24");
-	private static final String[] VMARGS = new String[] {"--enable-preview"};
+	private static final JavacTestOptions JAVAC_OPTIONS = new JavacTestOptions("-source 25");
+	private static final String[] VMARGS = new String[] {};
 
 	static {
 //		TESTS_NAMES = new String[] {"testImplicitType001"};
@@ -63,25 +61,25 @@ public class ImplicitlyDeclaredClassesTest extends AbstractRegressionTest9 {
 	}
 
 	public static junit.framework.Test suite() {
-		return buildMinimalComplianceTestSuite(testClass(), F_24);
+		return buildMinimalComplianceTestSuite(testClass(), F_25);
 	}
 	@Override
 	protected Map<String, String> getCompilerOptions() {
-		return getCompilerOptions(true);
+		return getCompilerOptions(false);
 	}
 	// Enables the tests to run individually
 	protected Map<String, String> getCompilerOptions(boolean previewFlag) {
 		Map<String, String> defaultOptions = super.getCompilerOptions();
-		defaultOptions.put(CompilerOptions.OPTION_Compliance, CompilerOptions.VERSION_24);
-		defaultOptions.put(CompilerOptions.OPTION_Source, CompilerOptions.VERSION_24);
-		defaultOptions.put(CompilerOptions.OPTION_TargetPlatform, CompilerOptions.VERSION_24);
+		defaultOptions.put(CompilerOptions.OPTION_Compliance, CompilerOptions.VERSION_25);
+		defaultOptions.put(CompilerOptions.OPTION_Source, CompilerOptions.VERSION_25);
+		defaultOptions.put(CompilerOptions.OPTION_TargetPlatform, CompilerOptions.VERSION_25);
 		defaultOptions.put(CompilerOptions.OPTION_EnablePreviews, previewFlag ? CompilerOptions.ENABLED : CompilerOptions.DISABLED);
 		defaultOptions.put(CompilerOptions.OPTION_ReportPreviewFeatures, CompilerOptions.IGNORE);
 		return defaultOptions;
 	}
 	@Override
 	protected void runConformTest(String[] testFiles, String expectedOutput) {
-		runConformTest(testFiles, expectedOutput, null, VMARGS, new JavacTestOptions("-source 24 --enable-preview"));
+		runConformTest(testFiles, expectedOutput, null, VMARGS, new JavacTestOptions("-source 25"));
 	}
 	@Override
 	protected void runConformTest(String[] testFiles, String expectedOutput, Map<String, String> customOptions) {
@@ -89,7 +87,7 @@ public class ImplicitlyDeclaredClassesTest extends AbstractRegressionTest9 {
 	}
 	@Override
 	protected void runNegativeTest(String[] testFiles, String expectedCompilerLog) {
-		Map<String, String> customOptions = getCompilerOptions(true);
+		Map<String, String> customOptions = getCompilerOptions(false);
 		Runner runner = new Runner();
 		runner.testFiles = testFiles;
 		runner.expectedCompilerLog = expectedCompilerLog;
@@ -99,7 +97,7 @@ public class ImplicitlyDeclaredClassesTest extends AbstractRegressionTest9 {
 		runner.runNegativeTest();
 	}
 	private CompilationUnitDeclaration parse(String source, String testName) {
-		this.complianceLevel = ClassFileConstants.JDK24;
+		this.complianceLevel = ClassFileConstants.JDK25;
 		/* using regular parser in DIET mode */
 		CompilerOptions options = new CompilerOptions(getCompilerOptions());
 		options.enablePreviewFeatures = true;
@@ -269,7 +267,7 @@ public class ImplicitlyDeclaredClassesTest extends AbstractRegressionTest9 {
 							System.out.println("Hello");
 						}"""},
 					"Hello");
-			verifyClassFile("version 24 : 68.65535", "X.class", ClassFileBytesDisassembler.SYSTEM);
+			verifyClassFile("version 25 : 69.", "X.class", ClassFileBytesDisassembler.SYSTEM);
 		} finally {
 		}
 	}
@@ -355,8 +353,20 @@ public class ImplicitlyDeclaredClassesTest extends AbstractRegressionTest9 {
 				"Zork cannot be resolved to a type\n" +
 				"----------\n");
 	}
-	public void testGH3137a() {
+	public void testGH3137a1() {
 		runConformTest(new String[] {
+				"X.java",
+				"""
+				public static void main(String[] args) {
+					IO.println("Hello1");
+					IO.println("Hello2");
+				}"""
+		},
+		"Hello1\n" +
+		"Hello2");
+	}
+	public void testGH3137a2() {
+		runNegativeTest(new String[] {
 				"X.java",
 				"""
 				public static void main(String[] args) {
@@ -364,16 +374,25 @@ public class ImplicitlyDeclaredClassesTest extends AbstractRegressionTest9 {
 					println("Hello2");
 				}"""
 		},
-		"Hello1\n" +
-		"Hello2");
+		"----------\n" +
+		"1. ERROR in X.java (at line 2)\n" +
+		"	println(\"Hello1\");\n" +
+		"	^^^^^^^\n" +
+		"The method println(String) is undefined for the type X\n" +
+		"----------\n" +
+		"2. ERROR in X.java (at line 3)\n" +
+		"	println(\"Hello2\");\n" +
+		"	^^^^^^^\n" +
+		"The method println(String) is undefined for the type X\n" +
+		"----------\n");
 	}
-	public void testGH3137b() {
+	public void testGH3137b1() {
 		runConformTest(new String[] {
 				"X.java",
 				"""
 				public static void main(String[] args) {
-					String str = readln("Enter:");
-					println(str);
+					String str = IO.readln("Enter:");
+					IO.println(str);
 				}
 				"""
 		},
@@ -382,11 +401,28 @@ public class ImplicitlyDeclaredClassesTest extends AbstractRegressionTest9 {
 		VMARGS,
 		JavacTestOptions.SKIP);
 	}
+	public void testGH3137b2() {
+		runNegativeTest(new String[] {
+				"X.java",
+				"""
+				public static void main(String[] args) {
+					String str = readln("Enter:");
+					IO.println(str);
+				}
+				"""
+		},
+		"----------\n" +
+		"1. ERROR in X.java (at line 2)\n" +
+		"	String str = readln(\"Enter:\");\n" +
+		"	             ^^^^^^\n" +
+		"The method readln(String) is undefined for the type X\n" +
+		"----------\n");
+	}
 	public void testGH3714() {
 		runConformTest(new String[] {
 				"Main.java",
 				"""
-				import static java.io.IO.*;
+				import static java.lang.IO.*;
 				public class Main {
 					public static void main(String[] args) {
 						println("Hello");
